fix the white-space and overflow-wrap to break lines in the textarea

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -2,7 +2,7 @@
   height: 400px;
   width: 100%;
   display: flex;
-  background-color: rgb(255, 230, 141);
+  background-color: rgb(255, 242, 195);
   justify-content: center;
   align-items: center;
   flex-direction: column;
