--- a/public/styles/tweet-timeline.css
+++ b/public/styles/tweet-timeline.css
@@ -43,7 +43,7 @@ article.tweet header {
 
 .mini-avatar {
   padding-right: 10px;
-  width: 50px;
+  width: 64px;
   height: auto;
 }
 
@@ -70,6 +70,9 @@ article.tweet header {
   margin-right: 2%;
   align-items: flex-end;
   width: 96%;
+    white-space: pre-wrap;
+  overflow-wrap: break-word;
+
 }
 
 article.tweet footer {
